kubernetes/bankapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-app
  namespace: bankapp-namespace

spec:
  replicas: 2

  selector:
    matchLabels:
      app: bank-app

  template:
    metadata:
      labels:
        app: bank-app

    spec:
      containers:
        - name: bank-app
          image: zorochan/bank-app:18
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
